[package]
name = "the-cat-api-http-mocks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0.79"
serde = { version = "1.0.136", features = ["derive"] }
axum = { version = "0.5.3", features = ["query"] }
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1.53"
axum-macros = "0.2.0"
tower = "0.4.12"
hyper = { version = "0.14.18", features = ["full"] }
